{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 764,
  "lineage": "e57af5af-246e-0113-d739-25b45a1d39ae",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "stride_flow_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/81ea0bb6f82193e3",
            "arn_suffix": "app/stride-flow-lb/81ea0bb6f82193e3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "stride-flow-lb-1821806554.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/81ea0bb6f82193e3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stride-flow-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-036ef46261c9bf7e9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0529093c181d59595"
              },
              {
                "subnet_id": "subnet-0d3d37ea242ff8e8b"
              }
            ],
            "subnets": [
              "subnet-0529093c181d59595",
              "subnet-0d3d37ea242ff8e8b"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-03e814af7cda12d43",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/81ea0bb6f82193e3"
          },
          "dependencies": [
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:listener/app/stride-flow-lb/81ea0bb6f82193e3/b4d7e49aa9e289bf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:targetgroup/stride-flow-target-group/6beab63557011904",
                        "weight": 100
                      }
                    ]
                  }
                ],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:962765735019:listener/app/stride-flow-lb/81ea0bb6f82193e3/b4d7e49aa9e289bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/81ea0bb6f82193e3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:listener/app/stride-flow-lb/81ea0bb6f82193e3/b4d7e49aa9e289bf"
          },
          "dependencies": [
            "module.alb.aws_lb.stride_flow_lb",
            "module.alb.aws_lb_target_group.stride_flow_target_group",
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "stride_flow_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:targetgroup/stride-flow-target-group/6beab63557011904",
            "arn_suffix": "targetgroup/stride-flow-target-group/6beab63557011904",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/up",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:962765735019:targetgroup/stride-flow-target-group/6beab63557011904",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:962765735019:loadbalancer/app/stride-flow-lb/81ea0bb6f82193e3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "stride-flow-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:962765735019:targetgroup/stride-flow-target-group/6beab63557011904"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "stride_flow_redis_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d7405d05f836d0d4",
            "arn": "arn:aws:ec2:us-east-1:962765735019:instance/i-0f672366a220086c8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f672366a220086c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b2e0a782db3af40a"
              }
            ],
            "primary_network_interface_id": "eni-0b2e0a782db3af40a",
            "private_dns": "ip-10-0-13-89.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.13.89",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e3be9dfd2c3669e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d046548b2bc15178",
            "tags": {
              "Name": "stride-flow-redis-instance"
            },
            "tags_all": {
              "Name": "stride-flow-redis-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b4942944c6e3ae9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "i-0f672366a220086c8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.sg.aws_security_group.stride_flow_backend_sg",
            "module.sg.aws_security_group.stride_flow_redis_sg",
            "module.vpc.aws_subnet.stride_flow_redis_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_instance_enpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-0a0396dd5b3c4cb7d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0396dd5b3c4cb7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-instance-enpoint-sg",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eic-endpoint-sg"
            },
            "tags_all": {
              "Name": "eic-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-0a0396dd5b3c4cb7d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stride_flow_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-036ef46261c9bf7e9",
            "description": "Allow TLS inbound traffic and all outbound traffic for active load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036ef46261c9bf7e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stride_flow_alb_sg",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stride_flow_alb_sg"
            },
            "tags_all": {
              "Name": "stride_flow_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-036ef46261c9bf7e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stride_flow_backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-006d73155068ad57e",
            "description": "Port 8080 to be only allowed from active load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006d73155068ad57e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-036ef46261c9bf7e9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group for backend",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stride_flow_backend_sg"
            },
            "tags_all": {
              "Name": "stride_flow_backend_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-006d73155068ad57e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stride_flow_rds_mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-09be5f14eef538849",
            "description": "Allowing Backend EC2 to access rds MYSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09be5f14eef538849",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006d73155068ad57e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Security Group for MYSQL RDS",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stride_flow_rds_mysql_sg"
            },
            "tags_all": {
              "Name": "stride_flow_rds_mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-09be5f14eef538849",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.sg.aws_security_group.stride_flow_backend_sg",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stride_flow_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:security-group/sg-07b4942944c6e3ae9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b4942944c6e3ae9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006d73155068ad57e"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "stride-flow-redis-sg",
            "name_prefix": "",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stride-flow-redis-sg"
            },
            "tags_all": {
              "Name": "stride-flow-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "sg-07b4942944c6e3ae9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.stride_flow_alb_sg",
            "module.sg.aws_security_group.stride_flow_backend_sg",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0897751306a6bf7af",
            "arn": "arn:aws:ec2:us-east-1:962765735019:elastic-ip/eipalloc-0897751306a6bf7af",
            "association_id": "eipassoc-0e34a105828b4f889",
            "domain": "vpc",
            "id": "eipalloc-0897751306a6bf7af",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06037e3a0739d02e2",
            "private_dns": "ip-10-0-1-168.ec2.internal",
            "private_ip": "10.0.1.168",
            "public_dns": "ec2-54-234-171-168.compute-1.amazonaws.com",
            "public_ip": "54.234.171.168",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-nat-eip"
            },
            "tags_all": {
              "Name": "stride-flow-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "eipalloc-0897751306a6bf7af",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stride_flow_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:internet-gateway/igw-0ba57098c439886ac",
            "id": "igw-0ba57098c439886ac",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-internet-gateway"
            },
            "tags_all": {
              "Name": "stride-flow-internet-gateway"
            },
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "igw-0ba57098c439886ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "stride_flow_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0897751306a6bf7af",
            "association_id": "eipassoc-0e34a105828b4f889",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a1d0c72b66a71b30",
            "network_interface_id": "eni-06037e3a0739d02e2",
            "private_ip": "10.0.1.168",
            "public_ip": "54.234.171.168",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d3d37ea242ff8e8b",
            "tags": {
              "Name": "stride-flow-nat-gateway"
            },
            "tags_all": {
              "Name": "stride-flow-nat-gateway"
            },
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "nat-0a1d0c72b66a71b30",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stride_flow_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:route-table/rtb-00e60a640cfef326c",
            "id": "rtb-00e60a640cfef326c",
            "owner_id": "962765735019",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a1d0c72b66a71b30",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stride-flow-private-route-table"
            },
            "tags_all": {
              "Name": "stride-flow-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtb-00e60a640cfef326c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stride_flow_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:route-table/rtb-030a9180b09850d35",
            "id": "rtb-030a9180b09850d35",
            "owner_id": "962765735019",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba57098c439886ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stride-flow-public-route-table"
            },
            "tags_all": {
              "Name": "stride-flow-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtb-030a9180b09850d35",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_vpc.stride_flow_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stride_flow_redis_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:route-table/rtb-0f6077fdfebdf91a3",
            "id": "rtb-0f6077fdfebdf91a3",
            "owner_id": "962765735019",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a1d0c72b66a71b30",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stride-flow-redis-route-table"
            },
            "tags_all": {
              "Name": "stride-flow-redis-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtb-0f6077fdfebdf91a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f4aaa9e2a9a99e1",
            "region": "us-east-1",
            "route_table_id": "rtb-00e60a640cfef326c",
            "subnet_id": "subnet-0ee3b4eaa215f4512"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-07f4aaa9e2a9a99e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_route_table.stride_flow_private_route_table",
            "module.vpc.aws_subnet.stride_flow_private_subnet",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f999facf179ba83",
            "region": "us-east-1",
            "route_table_id": "rtb-00e60a640cfef326c",
            "subnet_id": "subnet-0e5017a772a9990d7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-05f999facf179ba83",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_route_table.stride_flow_private_route_table",
            "module.vpc.aws_subnet.stride_flow_private_subnet",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redis_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0691585d8c180af5b",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6077fdfebdf91a3",
            "subnet_id": "subnet-0d046548b2bc15178"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-0691585d8c180af5b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_nat_gateway.stride_flow_nat_gateway",
            "module.vpc.aws_route_table.stride_flow_redis_route_table",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_subnet.stride_flow_redis_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stride_flow_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c26ad54e716739d",
            "region": "us-east-1",
            "route_table_id": "rtb-030a9180b09850d35",
            "subnet_id": "subnet-0d3d37ea242ff8e8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-07c26ad54e716739d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_route_table.stride_flow_public_route_table",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079bf9698a74e851c",
            "region": "us-east-1",
            "route_table_id": "rtb-030a9180b09850d35",
            "subnet_id": "subnet-0529093c181d59595"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "rtbassoc-079bf9698a74e851c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.stride_flow_internet_gateway",
            "module.vpc.aws_route_table.stride_flow_public_route_table",
            "module.vpc.aws_subnet.stride_flow_public_subnet",
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stride_flow_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-0ee3b4eaa215f4512",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee3b4eaa215f4512",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-private-subnet-1"
            },
            "tags_all": {
              "Name": "stride-flow-private-subnet-1"
            },
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-0ee3b4eaa215f4512",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-0e5017a772a9990d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5017a772a9990d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-private-subnet-2"
            },
            "tags_all": {
              "Name": "stride-flow-private-subnet-2"
            },
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-0e5017a772a9990d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stride_flow_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-0d3d37ea242ff8e8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3d37ea242ff8e8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-public-subnet-1"
            },
            "tags_all": {
              "Name": "stride-flow-public-subnet-1"
            },
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-0d3d37ea242ff8e8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-0529093c181d59595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0529093c181d59595",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-public-subnet-2"
            },
            "tags_all": {
              "Name": "stride-flow-public-subnet-2"
            },
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-0529093c181d59595",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stride_flow_redis_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:subnet/subnet-0d046548b2bc15178",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d046548b2bc15178",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962765735019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-redis-subnet"
            },
            "tags_all": {
              "Name": "stride-flow-redis-subnet"
            },
            "vpc_id": "vpc-03e814af7cda12d43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "subnet-0d046548b2bc15178",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.stride_flow_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stride_flow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:962765735019:vpc/vpc-03e814af7cda12d43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03bf936ea17602260",
            "default_route_table_id": "rtb-00417310d5b330a43",
            "default_security_group_id": "sg-0901566892ea94355",
            "dhcp_options_id": "dopt-0d55437c69818a5e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e814af7cda12d43",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00417310d5b330a43",
            "owner_id": "962765735019",
            "region": "us-east-1",
            "tags": {
              "Name": "stride-flow-vpc"
            },
            "tags_all": {
              "Name": "stride-flow-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "962765735019",
            "id": "vpc-03e814af7cda12d43",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}